--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "babel-eslint": "^10.0.3",
     "electron": "^6.0.0",
     "eslint": "^5.16.0",
+    "eslint-config-google": "^0.14.0",
     "eslint-plugin-vue": "^5.0.0",
     "lint-staged": "^9.4.2",
     "node-sass": "^4.12.0",
