--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "electron-store": "^5.1.0",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
+    "vuetify": "^2.1.0",
     "vuex": "^3.0.1",
     "ws": "^7.2.0"
   },
@@ -34,9 +35,12 @@
     "eslint-plugin-vue": "^5.0.0",
     "lint-staged": "^9.4.2",
     "node-sass": "^4.12.0",
+    "sass": "^1.19.0",
     "sass-loader": "^8.0.0",
     "vue-cli-plugin-electron-builder": "^1.4.1",
-    "vue-template-compiler": "^2.6.10"
+    "vue-cli-plugin-vuetify": "^2.0.2",
+    "vue-template-compiler": "^2.6.10",
+    "vuetify-loader": "^1.3.0"
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
