--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "main": "background.js",
   "dependencies": {
+    "@handsontable/vue": "^4.1.1",
     "core-js": "^3.3.2",
     "electron-store": "^5.1.0",
+    "handsontable": "^7.2.2",
     "material-icons": "^0.3.1",
     "pso": "^1.0.0",
     "vue": "^2.6.10",
