--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
   "main": "background.js",
   "dependencies": {
     "@handsontable/vue": "^4.1.1",
+    "chart.js": "^2.9.3",
+    "chartjs-plugin-datalabels": "^0.7.0",
     "core-js": "^3.3.2",
     "electron-store": "^5.1.0",
     "handsontable": "^7.2.2",
     "material-icons": "^0.3.1",
     "pso": "^1.0.0",
     "vue": "^2.6.10",
+    "vue-chartjs": "^3.5.0",
     "vue-router": "^3.1.3",
     "vuetify": "^2.1.0",
     "vuex": "^3.0.1",
