--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "electron-store": "^5.1.0",
     "handsontable": "^7.2.2",
     "material-icons": "^0.3.1",
+    "node-fetch": "^2.6.0",
     "vue": "^2.6.10",
     "vue-chartjs": "^3.5.0",
     "vue-router": "^3.1.3",
