--- a/package.json
+++ b/package.json
@@ -15,16 +15,13 @@
     "chart.js": "^2.9.3",
     "chartjs-plugin-datalabels": "^0.7.0",
     "core-js": "^3.3.2",
-    "electron-store": "^5.1.0",
     "handsontable": "^7.2.2",
     "material-icons": "^0.3.1",
-    "node-fetch": "^2.6.0",
     "vue": "^2.6.10",
     "vue-chartjs": "^3.5.0",
     "vue-router": "^3.1.3",
     "vuetify": "^2.1.0",
-    "vuex": "^3.0.1",
-    "ws": "^7.2.0"
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.0.0",
@@ -35,17 +32,20 @@
     "@vue/eslint-config-standard": "^4.0.0",
     "babel-eslint": "^10.0.3",
     "electron": "^7.1.2",
+    "electron-store": "^5.1.1",
     "eslint": "^5.16.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-vue": "^5.0.0",
     "lint-staged": "^9.4.2",
-    "node-sass": "^4.12.0",
+    "node-fetch": "^2.6.0",
+    "node-sass": "^4.13.1",
     "sass": "^1.19.0",
     "sass-loader": "^8.0.0",
     "vue-cli-plugin-electron-builder": "^1.4.1",
     "vue-cli-plugin-vuetify": "^2.0.2",
     "vue-template-compiler": "^2.6.10",
-    "vuetify-loader": "^1.3.0"
+    "vuetify-loader": "^1.3.0",
+    "ws": "^7.2.3"
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
